--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,29 @@ backend/*.log
 # --------------------
 frontend/node_modules/
 frontend/build/
+frontend/*.log
 
 # --------------------
-# Allgemein
+# Logs
+# --------------------
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# --------------------
+# Allgemein / Editor / OS
 # --------------------
 .DS_Store
 Thumbs.db
 .vscode/
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
